--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
             </nav>
             <div class="d-none d-lg-block">
-              <a href="https://templatesjungle.gumroad.com/l/foodmart-bootstrap-html-template" target="_blank" class="nav-link btn-coupon-code">
+              <a href="https://github.com/NaeemAdnan" target="_blank" class="nav-link btn-coupon-code">
                 <img src="images/gift.svg" alt="gift icon">
                 <strong class="ms-2 text-dark">git/NaeemAdnan</strong>
               </a>
